improved gradle build for spock-example, updated readme

--- a/spock-example/README
+++ b/spock-example/README
@@ -2,7 +2,7 @@ Spock Framework Example Project
 ===============================
 
 The purpose of this project is to help you get started with Spock. The project includes several example specifications and build scripts for Ant, Gradle, and Maven. It also makes it easy to create an Eclipse or IDEA project, allowing you to run the example specs from within your IDE.
-All three builds (Ant, Gradle, Maven) will download all required dependencies (including Spock itself), compile the project, and finally run the example specs. The Gradle build goes one step further by bootstrapping itself, alleviating the need to have a build tool preinstalled. (When bootstrapping, Gradle will install itself into the "wrapper/dists" subdirectory of this project.)
+All three builds (Ant, Gradle, Maven) will automatically download all required dependencies, compile the project, and finally run the example specs. The Gradle build goes one step further by bootstrapping itself, alleviating the need to have a build tool preinstalled.
 
 Prerequisites
 -------------
@@ -14,15 +14,21 @@ Building with Ant
 -----------------
 Type: ant clean test
 
+Downloaded files will be stored in the local Maven repository (typically "<user_home>/.m2/repository").
+
 Building with Gradle
 --------------------
 The following assumes that you are using a *nix. On Windows, always type "gradlew" instead of "./gradlew".
 
 Type: ./gradlew clean test
 
+Downloaded files (including the Gradle distribution itself) will be stored in the Gradle user home directory (typically "<user_home>/.gradle").
+
 Building with Maven
 -------------------
 Type: mvn clean test
+
+Downloaded files will be stored in the local Maven repository (typically "<user_home>/.m2/repository").
 
 Creating an Eclipse project
 ---------------------------
@@ -30,7 +36,7 @@ The following assumes that you are using a *nix. On Windows, always type "gradle
 
 Type: ./gradlew cleanEclipse eclipse
 
-Make sure you have a recent version of the Groovy Eclipse plugin installed. After importing the generated project into a workspace, go to Preferences->Java->Build Path->Classpath Variables and add a variable named GRADLE_CACHE with value "<user_home>/.gradle/cache". (If you are already a Gradle user and have an environment variable GRADLE_USER_HOME set, the correct value is "<GRADLE_USER_HOME>/cache".) You should now be able to build the project, and to run the specs like you would run a JUnit test. See http://wiki.spockframework.org/GettingStarted#Eclipse for more information on how to get started with Spock and Eclipse.
+Make sure you have a recent version of the Groovy Eclipse plugin installed. After importing the generated project into a workspace, go to Preferences->Java->Build Path->Classpath Variables and add a variable named GRADLE_CACHE with value "<user_home>/.gradle/cache". (If you have an environment variable GRADLE_USER_HOME set, the correct value is "<GRADLE_USER_HOME>/cache".) You should now be able to build the project, and to run the specs like you would run a JUnit test. See http://wiki.spockframework.org/GettingStarted#Eclipse for more information on how to get started with Spock and Eclipse.
 
 Creating an IDEA project
 ---------------------------
