--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Spock is a developer testing and specification framework for Java and Groovy app
 visit http://spockframework.org. To run your first spec right away, visit http://meet.spockframework.org.
 
 Current release versions: 0.5-groovy-1.6, 0.5-groovy-1.7, 0.5-groovy-1.8 (released 2010-12-10)
-Current development versions: 0.6-groovy-1.7-SNAPSHOT, 0.6-groovy-1.8-SNAPSHOT
+Current development versions: 0.6-groovy-1.7-SNAPSHOT, 0.6-groovy-1.8-SNAPSHOT, 0.6-groovy-1.9-SNAPSHOT
 
 Modules
 -------
