--- a/README
+++ b/README
@@ -4,14 +4,14 @@ Spock Framework README
 Spock is a developer testing and specification framework for Java and Groovy applications. To learn more about Spock,
 visit http://spockframework.org. To run your first spec right away, visit http://meet.spockframework.org.
 
-Current release versions: 0.6-groovy-1.7, 0.6-groovy-1.8 (released 2012-03-02)
-Current development versions: 0.7-groovy-1.8-SNAPSHOT, 0.7-groovy-2.0-SNAPSHOT
+Current release versions: 0.7-groovy-1.8, 0.7-groovy-2.0 (released 2012-10-08)
+Current development versions: 1.0-groovy-1.8-SNAPSHOT, 1.0-groovy-2.0-SNAPSHOT
 
 Modules
 -------
 spock-core: Core framework.
 
-spock-specs: Specifications for spock-core, written with Spock. Not required for using the framework.
+spock-specs: Specifications for spock-core, implemented using Spock. Not required for using Spock.
 
 spock-maven: Extended Maven support (optional).
 
@@ -24,6 +24,8 @@ spock-tapestry: Integration with the Tapestry 5 IoC container.
 spock-guice: Integration with Guice 2.
 
 spock-unitils: Integration with Unitils (http://www.unitils.org/).
+
+spock-report: Interactive business-friendly HTML reports.
 
 spock-grails: The Grails plugin is now its own project hosted at https://github.com/spockframework/spock-grails.
 
