Minor documentation corrections: spelling, code examples. README.md corrections - twitter link, removed example project from modules, added to resources section, Added note about contributions and link.

--- a/docs/new_and_noteworthy.adoc
+++ b/docs/new_and_noteworthy.adoc
@@ -91,7 +91,7 @@ Interactions can now be declared at mock creation time:
 [source,groovy]
 ----
 def person = Mock(Person) {
-    sing() >> "tra-la-la
+    sing() >> "tra-la-la"
     3 * eat()
 }
 ----
