Improvements to reference docs, complete switch to asciidoctor

--- a/docs/getting_started.adoc
+++ b/docs/getting_started.adoc
@@ -4,13 +4,13 @@ It's really easy to get started with Spock. This section shows you how.
 
 == Spock Web Console
 
-http://meet.spockframework.org[Spock Web Console] is a website that allows you to instantly view, edit, run, and
+http://webconsole.spockframework.org[Spock Web Console] is a website that allows you to instantly view, edit, run, and
 even publish Spock specifications. It is the perfect place to toy around with Spock without making any commitments.
-So why not run http://meet.spockframework.org/?id=9001[Hello, Spock!] right now?
+So why not run http://webconsole.spockframework.org/edit/9001[Hello, Spock!] right away?
 
 == Spock Example Project
 
 To try Spock in your local environment, clone or download/unzip the https://github.com/spockframework/spock-example
-[[Spock Example Project]]. It comes with fully working Ant, Gradle, and Maven builds that require no further setup.
+[Spock Example Project]. It comes with fully working Ant, Gradle, and Maven builds that require no further setup.
 The Gradle build even bootstraps Gradle itself and gets you up and running in Eclipse or IDEA with a single command.
 See the README for detailed instructions.
