--- a/docs/data_driven_testing.adoc
+++ b/docs/data_driven_testing.adoc
@@ -47,6 +47,7 @@ class MathSpec extends Specification {
 We have finished the test logic, but still need to supply the data values to be used. This is done in a +where:+ block,
 which always comes at the end of the method. In the simplest (and most common) case, the +where:+ block holds a _data table_.
 
+[[data-tables]]
 == Data Tables
 
 Data tables are a convenient way to exercise a feature method with a fixed set of data values:
