@ConfineMetaClassChanges requires a list of classes as value
The original https://github.com/spockframework/spock/pull/51 change got somehow lost

--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -180,7 +180,7 @@ To confine meta class changes to the scope of a feature method or spec class, us
 ----
 @Stepwise
 class FooSpec extends Specification {
-  @ConfineMetaClassChanges
+  @ConfineMetaClassChanges([String])
   def "I run first"() {
     when:
     String.metaClass.someMethod = { delegate }
