Created all_in_one.adoc to create a single page documentation (Issue #65) Moved all headings one level down to fix asciidoctor error: only docbook type can contain level 0 sections

--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -11,3 +11,5 @@ Version 1.0
 . <<modules.adoc#,Modules>>
 . <<release_notes.adoc#,Release Notes>>
 . <<migration_guide.adoc#,Migration Guide>>
+
+<<all_in_one.adoc#,Single Page Documentation>>
