--- a/docs/introduction.adoc
+++ b/docs/introduction.adoc
@@ -1,5 +1,5 @@
 [[introduction]]
-= Introduction
+== Introduction
 
 Spock is a testing and specification framework for Java and Groovy applications. What makes it stand out from the crowd
 is its beautiful and highly expressive specification language. Thanks to its JUnit runner, Spock is compatible with most
