--- a/docs/modules.adoc
+++ b/docs/modules.adoc
@@ -1,27 +1,27 @@
-= Modules
+== Modules
 
-== Guice Module
+=== Guice Module
 
 Integration with the http://code.google.com/p/google-guice/[Guice] IoC container. For examples see the specs in the
 https://github.com/spockframework/spock/tree/master/spock-guice/src/test/groovy/org/spockframework/guice[codebase].
 
-== Spring Module
+=== Spring Module
 
 Integration with the http://docs.spring.io/spring/docs/4.1.5.RELEASE/spring-framework-reference/html/testing.html#testcontext-framework[Spring TestContext Framework].
 For examples see the specs in the https://github.com/spockframework/spock/tree/master/spock-spring/src/test/groovy/org/spockframework/spring[codebase].
 
-== Tapestry Module
+=== Tapestry Module
 
 Integration with the http://tapestry.apache.org/tapestry5/[Tapestry5] IoC container. For examples see the specs in the
 https://github.com/spockframework/spock/tree/master/spock-tapestry/src/test/groovy/org/spockframework/tapestry[codebase].
 
 
-== Unitils Module
+=== Unitils Module
 
 Integration with the http://www.unitils.org/[Unitils] library. For examples see the specs in the
 https://github.com/spockframework/spock/tree/master/spock-unitils/src/test/groovy/org/spockframework/unitils/dbunit[codebase].
 
-== Grails Module
+=== Grails Module
 
 The Grails plugin has moved to its own https://github.com/spockframework/spock-grails[GitHub project].
 
